# classicube-mention-flash-plugin

./: Cargo.toml  README.md  flake.nix
.github/: semantic-release.json
.github/workflows/: build.yml  release.yml  rust.yml  update-lock-files.yml
src/: component.rs  error.rs  flash.rs  lib.rs  logger.rs
src/components/: logger.rs  mention_flash.rs  mod.rs
