[package]
name = "classicube-mention-flash-plugin"
version = "0.1.9"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.99"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git", branch = "main" }
classicube-sys = "=4.3.0"
regex = "=1.11.2"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.20"

[target.'cfg(windows)'.dependencies]
winapi = { version = "=0.3.9", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
x11 = "=2.21.0"


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
