[package]
name = "classicube-mention-flash-plugin"
version = "0.1.9"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.102"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-sys = "=5.0.0"
regex = "=1.12.3"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "=0.3.9", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
x11 = "=2.21.0"
